# AsekioML

./: CMakeLists.txt  LICENSE  NotesQuestions  README.md  RENAME_PLAN.md  RENAME_PROGRESS.md  RENAME_SCRIPT.md  debug_image_filters.cpp  debug_text_to_image_integration.cpp  debug_training.cpp  fix_cmake.txt  simple_dropout_test.cpp  temp.txt  week11_demo_output.txt  week12_demo_output.txt
docs/: GPU_SUPPORT.md  PYTHON_PAIN_POINTS.md  STATISTICAL_MONITORING.md
examples/: advanced_features_demo.cpp  advanced_frame_interpolation_demo.cpp  advanced_frame_interpolation_demo_simple.cpp  advanced_fusion_demo.cpp  advanced_fusion_test.cpp  advanced_ml_features_demo.cpp  advanced_training_demo.cpp  ai_infrastructure_demo.cpp  ai_infrastructure_demo_simple.cpp  audio_processing_demo.cpp  audio_visual_sync_demo.cpp  audio_visual_sync_demo_simple.cpp  cnn_layers_demo.cpp  cross_modal_guidance_demo.cpp  cross_modal_guidance_demo_simple.cpp  example.cpp  future_ai_demo.cpp  gpu_demo.cpp  image_processing_demo.cpp  model_serialization_demo.cpp  multimodal_attention_demo.cpp  multimodal_basic_test.cpp  orchestral_ai_workflow_demo.cpp  python_pain_points_demo.cpp  rest_api_server_demo.cpp  simple_video_diffusion_demo.cpp  statistical_monitoring_demo.cpp  tensor_foundation_demo.cpp  text_to_image_demo.cpp  text_to_speech_demo.cpp  transparency_demo.cpp  video_audio_text_fusion_demo.cpp  video_diffusion_demo.cpp  video_tensor_operations_demo.cpp  week15_basic_demo.cpp  week15_concept_demo.cpp
include/: activation.hpp  advanced_ai_layers.hpp  advanced_layers.hpp  advanced_losses.hpp  advanced_optimizers.hpp  advanced_trainer.hpp  ai_infrastructure.hpp  asekioml.hpp  callbacks.hpp  content_generation.hpp  dataset.hpp  gpu_acceleration.hpp  gradient_clipping.hpp  layer.hpp  loss.hpp  matrix.hpp  memory_optimization.hpp  model_serialization.hpp  model_zoo.hpp  modern_api.hpp  multimodal_ai.hpp  network.hpp  optimizer.hpp  production_features.hpp  profiling.hpp  regularization.hpp  schedulers.hpp  simd_matrix.hpp  tensor.hpp  threading.hpp  tokenizer.hpp  training_history.hpp
include/ai/: adaptive_pipeline_manager.hpp  adaptive_quality_engine.hpp  advanced_frame_interpolation.hpp  advanced_fusion_networks.hpp  attention_layers.hpp  audio_processing.hpp  audio_visual_sync.hpp  cnn_layers.hpp  compute_engine.hpp  cross_modal_guidance.hpp  dynamic_model_dispatcher.hpp  image_processing.hpp  memory_manager.hpp  multimodal_attention.hpp  orchestral_ai_director.hpp  orchestral_ai_workflow.hpp  production_streaming_manager.hpp  real_time_content_pipeline.hpp  simple_video_diffusion.hpp  streaming_fusion_manager.hpp  text_to_image.hpp  text_to_speech.hpp  video_audio_text_fusion.hpp  video_diffusion.hpp  video_tensor_ops.hpp
include/api/: rest_api_server.hpp  rest_api_server_old.hpp
src/: activation.cpp  advanced_layers.cpp  dataset.cpp  gpu_acceleration.cpp  layer.cpp  loss.cpp  matrix.cpp  memory_optimization.cpp  model_serialization.cpp  modern_api.cpp  network.cpp  optimizer.cpp  production_features.cpp  profiling.cpp  regularization.cpp  simd_matrix.cpp  tensor.cpp  threading.cpp  tokenizer.cpp
src/ai/: adaptive_pipeline_manager.cpp  adaptive_quality_engine.cpp  advanced_frame_interpolation.cpp  advanced_frame_interpolation_minimal.cpp  advanced_frame_interpolation_working.cpp  advanced_fusion_networks.cpp  attention_layers.cpp  audio_processing.cpp  audio_visual_sync.cpp  cnn_layers.cpp  compute_engine.cpp  cross_modal_guidance.cpp  dynamic_model_dispatcher.cpp  image_processing.cpp  memory_manager.cpp  multimodal_attention.cpp  multimodal_attention_fixed.cpp  orchestral_ai_director.cpp  orchestral_ai_workflow.cpp  production_streaming_manager.cpp  real_time_content_pipeline.cpp  simple_video_diffusion.cpp  streaming_fusion_manager.cpp  text_to_image.cpp  text_to_speech.cpp  video_audio_text_fusion.cpp  video_diffusion.cpp  video_tensor_ops.cpp
src/api/: rest_api_server.cpp
tests/: test_main.cpp
